# DiceAI-PyModule

./: .gitignore  LICENSE  README.md  pyproject.toml
src/DiceAI/: __init__.py  analyzer.py
src/review_analyzer/: __init__.py  analyzer.py
tests/: test_analyzer.py
