[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "DiceAI-Module"
version = "0.1.0"
authors = [
    { name = "Mayur Raut", email = "mayurraut.dev@gmail.com" },
]
description = "A package to analyze cafeteria/mess reviews and more using Gemini AI"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "google-generativeai>=0.1.0",
]

[project.optional-dependencies]
test = ["pytest>=6.0"]
